# context-handler

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.VSCodeCounter/2021-10-24_12-19-02/: details.md  results.csv  results.md  results.txt
.artifacts/: tests.xml
.github/workflows/: codeql-analysis.yml  veracode-analysis.yml
context_handler/: __init__.py  _datastructures.py  context.py  factory.py  getters.py  main.py  utils.py
context_handler/adapters/: fastapi.py  sanic.py
context_handler/ext/http/: aiohttp.py  requests.py
context_handler/ext/sqlalchemy/: __init__.py  asyncio.py  sync.py
context_handler/interfaces/: handler.py
context_handler/utils/: lazy.py
docs/: index.md
docs/protocols/: async-provider.md  provider.md
docs/tools/: ensure-context.md  factory.md  generic.md
old_context_handler/: __init__.py  context.py  ensure_context.py  factory.py  generic.py  getters.py  parent.py
old_context_handler/adapters/: fastapi.py
tests/: mocks.py  test_context.py  test_datastructures.py  test_ensure_context.py
tests/ext/sqlalchemy/: test_asyncio.py  test_sync.py
tests/mocks/: state.py
