[tool.poetry]
name = "context-handler"
version = "4.0.2"
description = ""
authors = ["Gustavo Correa <self.gustavocorrea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.5.3"
bandit = "^1.7.4"
blue = "^0.9.1"
editables = "^0.3"
isort = "^5.10.1"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
pytest-cov = "^3.0.0"
twine = "^4.0.1"
typing-extensions = "^4.3.0"
requests = "^2.28.1"
httpretty = "^1.1.4"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.41"
aiosqlite = "^0.17.0"
sqlalchemy2-stubs = "^0.0.2-alpha.27"
coverage = "^6.4.4"

[tool.black]
line_length = 79

[tool.isort]
profile = "black"
line_length = 79
force_single_line = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
